# cosmic-soup

./: .cursorrules  LICENSE  README.md  pyproject.toml
notebooks/: particle_lenia.ipynb  test.ipynb
src/cosmic_soup/: main.py  particles.py  utils.py
tests/: test_main.py
ui/: streamlit_app.py
